--- a/views/home.ejs
+++ b/views/home.ejs
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text-To-Speech</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- <link rel="styleSheet" href="/voice_ass/views/styel.css"> -->
     <style>
         body {
@@ -32,7 +33,7 @@
 
         .text {
             /* width: 100%; */
-            height: 200px;
+            height: 250px;
             border-radius: 10px;
             resize: none;
             font-size: 20px;
@@ -53,6 +54,7 @@
             background-clip: text;
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
+            margin-bottom: 10px;
         }
 
         .name {
@@ -82,6 +84,33 @@
                 2px 4px 16px 0px rgba(0, 255, 255, 0.7);
 
         }
+
+        .Download {
+            padding: 12px 20px;
+            background: #0ea4dacf;
+            position: absolute;
+            left: 680px;
+            width: 120px;
+            border: 0;
+            color: #fff;
+            font-size: 18px;
+            cursor: pointer;
+            border-radius: 5px;
+            margin-top: 25px;
+            margin-left: 450px;
+            box-shadow: 10px 8px 9px -5px rgba(0, 0, 0, 0.55);
+            -webkit-box-shadow: 10px 8px 9px -5px rgba(0, 0, 0, 0.55);
+            -moz-box-shadow: 10px 8px 9px -5px rgba(0, 0, 0, 0.55);
+        }
+
+        .Download:hover {
+
+            box-shadow: 0px 1px 2px 0px rgba(0, 255, 255, 0.7),
+                1px 2px 4px 0px rgba(0, 255, 255, 0.7),
+                2px 4px 8px 0px rgba(0, 255, 255, 0.7),
+                2px 4px 16px 0px rgba(0, 255, 255, 0.7);
+
+        }
     </style>
 </head>
 
@@ -91,66 +120,82 @@
         <div class="text-to-speech">
             <h1>Text To Speech Convertor</h1>
             <textarea name="text" rows="4" class="text" cols="70" class="text">Enter the text to convert</textarea>
-            <div class="DropDown">
-                <label for="select">Select Language of Voice: </label>
-                <select name="language" class="name">
-                    <option value="af" selected>Afrikaans</option>
-                    <option value="sq">Albanian</option>
-                    <option value="hy">Armenina</option>
-                    <option value="ar">Arabic</option>
-                    <option value="zh">Chinese</option>
-                    <option value="ca">Catalan</option>
-                    <option value="zh-tw">Chinese (Mandarin/Taiwan)</option>
-                    <option value="zh-cn">Chinese (Mandarin/China)</option>
-                    <option value="zh-yue">Chinese (Cantonese)</option>
-                    <option value="hr">Croatian</option>
-                    <option value="cs">Czech</option>
-                    <option value="da">Danish</option>
-                    <option value="nl">Dutch</option>
-                    <option value="en">English</option>
-                    <option value="en-au">English (Australia)</option>
-                    <option value="en-uk">English (United Kingdom)</option>
-                    <option value="en-us">English (United States)</option>
-                    <option value="eo">Esperanto</option>
-                    <option value="fi">Finnish</option>
-                    <option value="de">German</option>
-                    <option value="gu">Gujarati</option>
-                    <option value="fr">French</option>
-                    <option value="el">Greek</option>
-                    <option value="ht">Haitian Creole</option>
-                    <option value="hi">Hindi</option>
-                    <option value="hu">Hungarian</option>
-                    <option value="is">Icelandic</option>
-                    <option value="id">Indonesian</option>
-                    <option value="it">Italian</option>
-                    <option value="ja">Japanese</option>
-                    <option value="ko">Korean</option>
-                    <option value="la">Latin</option>
-                    <option value="lv">Latvian</option>
-                    <option value="mk">Macedonian</option>
-                    <option value="no">Norwegian</option>
-                    <option value="pl">Polish</option>
-                    <option value="pt">Portuguese</option>
-                    <option value="pt-br">Portuguese (Brazil)</option>
-                    <option value="ro">Romanian</option>
-                    <option value="ru">Russian</option>
-                    <option value="sr">Serbian</option>
-                    <option value="sk">Slovak</option>
-                    <option value="es">Spanish</option>
-                    <option value="es-es">Spanish (Spain)</option>
-                    <option value="es-us">Spanish (United States)</option>
-                    <option value="sw">Swahili</option>
-                    <option value="sv">Swedish</option>
-                    <option value="ta">Tamil</option>
-                    <option value="th">Thai</option>
-                    <option value="tr">Turkish</option>
-                    <option value="vi">Vietnamese</option>
-                    <option value="cy">Welsh</option>
+            <div class="select-language">
+                <label>Select the language</label>
+                <select class="form-select" name="" id="">
                 </select>
             </div>
-            <input class="submit" type="submit" value="Speech To Text">
+            <button class="submit" id="btn">Text To Speech</button>
+            <button class="Download">Download</button>
         </div>
     </form>
+
+    <script>
+        const textarea = document.querySelector("textarea"),
+            voiceList = document.querySelector("select"),
+            speakButton = document.getElementById("btn");
+
+        const body = document.querySelector('body');
+
+        let synth = speechSynthesis;
+        let isSpeaking = true;
+
+        function voices() {
+            for (let voice of synth.getVoices()) {
+                let selected = voice.name === "Google US English" ? "selected" : "";
+                let option = `<option value="${voice.name}" ${selected}> ${voice.name} (${voice.lang}) </option>`;
+                voiceList.insertAdjacentHTML("beforeend", option);
+            }
+        }
+
+        synth.addEventListener("voiceschanged", voices)
+
+        function textToSpeak(text) {
+            let utter = new SpeechSynthesisUtterance(text);
+
+            for (let voice of synth.getVoices()) {
+                if (voice.name === voiceList.value) {
+                    utter.voice = voice;
+                }
+            }
+
+            synth.speak(utter);
+            // body.style.background = 'url(../wave.gif)';
+            // body.style.backgroundRepeat = 'repeat-x';
+            // body.style.backgroundSize = '100% 100%'
+        }
+
+        speakButton.addEventListener("click", e => {
+            e.preventDefault();
+            if (textarea.value !== "") {
+                if (!synth.speaking) {
+                    textToSpeak(textarea.value);
+                }
+
+                if (textarea.value.length > 80) {
+                    if (isSpeaking) {
+                        synth.resume();
+                        isSpeaking = false;
+                        speakButton.innerText = "Pause";
+                    }
+                    else {
+                        synth.pause();
+                        isSpeaking = true;
+                        speakButton.innerText = "Resume";
+                        body.style.background = 'linear-gradient(to right bottom, #d13cff, #031f6a)';
+                    }
+                    setInterval(() => {
+                        if (!synth.speaking && !isSpeaking) {
+                            isSpeaking = true;
+                            speakButton.innerText = "Text To Speech";
+                        }
+                    });
+                } else {
+                    speakButton.innerText = "Text To Speech";
+                }
+            }
+        });
+    </script>
 </body>
 
 </html>
